# paindor

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel  generate_coverage_files.sh  sonar-project.properties
.github/workflows/: build.yml
core/: BUILD.bazel
core/include/: Paindor.hpp
core/include/Paindor/: Application.hpp  Event.hpp  Log.hpp  Paindor.hpp
core/private_include/Paindor/: CoreLog.hpp
core/src/: Application.cpp  CoreLog.cpp  Log.cpp  Paindor.cpp
core/test/: Application_run_test.cpp  CoreLog_test.cpp  Log_test.cpp  Paindor_init_test.cpp
examples/: BUILD.bazel
examples/001_HelloWorld/: main.cpp
