filegroup(
    name = "PaindorHeaders",
    srcs = glob([
        "include/Paindor/*",
    ]),
    visibility = [
        "//examples:__pkg__",
    ]
)

cc_library(
    name = "Paindor",
    srcs = glob([
        "src/*.cpp",
    ]),
    hdrs = [
        ":PaindorHeaders",
        "private_include/Paindor/CoreLog.hpp",
    ],
    includes = [
        "./include",
        "./private_include",
    ],
    visibility = [
        "//examples:__pkg__",
    ],
    deps = [
        "@boost//:log",
    ]
)

cc_test(
    name = "Paindor_test",
    size = "small",
    srcs = [
        "test/Application_run_test.cpp",
    ],
    deps = [
        ":Paindor",
        "@com_google_googletest//:gtest_main",
    ],
)
