filegroup(
    name = "PaindorHeaders",
    srcs = glob([
        "include/Paindor/*",
    ]),
    visibility = [
        "//examples:__pkg__",
    ]
)

cc_library(
    name = "Paindor",
    srcs = glob([
        "src/*.cpp",
        "private_include/Paindor/*.hpp",
    ]),
    hdrs = [
        ":PaindorHeaders",
    ],
    includes = [
        "./include",
    ],
    copts = [
        #"-v",
    ],
    visibility = [
        "//examples:__pkg__",
    ],
    deps = [
        "@boost//:log",
    ]
)

cc_test(
    name = "Paindor_test",
    size = "small",
    srcs = glob([
        "test/*.cpp",
        "private_include/Paindor/*.hpp",
    ]),
    copts = [
        #"-v",
    ],
    deps = [
        ":Paindor",
        "@com_google_googletest//:gtest_main",
    ],
)
